hphp/test/zend/bad/ext/standard/tests/strings/bug33605.php
<?php
$res = substr_compare("aa", "a", -99999999, 0, 0);
var_dump($res);

?>